[package]
name = "darling_macro"
version = "0.23.0"
authors = ["Ted Driggs <ted.driggs@outlook.com>"]
repository = "https://github.com/TedDriggs/darling"
description = """
Internal support for a proc-macro library for reading attributes into structs when
implementing custom derives. Use https://crates.io/crates/darling in your code.
"""
license = "MIT"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
quote = "1.0.18"
syn = { version = "2", git = "https://github.com/DJMcNab/syn.git", rev = "7680cb0c1d7cbf812118081dbcdfe5bc67083488", features = ["full", "extra-traits"] }
darling_core = { version = "=0.23.0", path = "../core" }

[lib]
proc-macro = true
